bmesh.from_object() - SystemError: More keyword list entries (5) than format specifiers (4) #97025

Closed
opened 2022-04-04 11:15:45 +02:00 by Jakub Uhlik · 10 comments

System Information
Operating system: macOS-10.13.6-x86_64-i386-64bit 64 Bits

Blender Version
Broken: version: 3.2.0 Alpha, branch: master, commit date: 2022-04-03 17:57, hash: 637fe6f5ff
Worked: 3.2 from 2-3 weeks ago? something like that

Short description of error
SystemError: More keyword list entries (5) than format specifiers (4)

Exact steps for others to reproduce the error
add cube, have it selected and active, run script

import bpy
import bmesh

c = bpy.context
o = c.active_object
depsgraph = c.evaluated_depsgraph_get()
eo = o.evaluated_get(depsgraph)
bm = bmesh.new()
bm.from_object(eo, depsgraph, cage=False, face_normals=True)

output

Traceback (most recent call last):
  File "/Text", line 9, in <module>
SystemError: More keyword list entries (5) than format specifiers (4)
Error: Python script failed, check the message in the system console
**System Information** Operating system: macOS-10.13.6-x86_64-i386-64bit 64 Bits **Blender Version** Broken: version: 3.2.0 Alpha, branch: master, commit date: 2022-04-03 17:57, hash: `637fe6f5ff` Worked: 3.2 from 2-3 weeks ago? something like that **Short description of error** SystemError: More keyword list entries (5) than format specifiers (4) **Exact steps for others to reproduce the error** add cube, have it selected and active, run script ``` import bpy import bmesh c = bpy.context o = c.active_object depsgraph = c.evaluated_depsgraph_get() eo = o.evaluated_get(depsgraph) bm = bmesh.new() bm.from_object(eo, depsgraph, cage=False, face_normals=True) ``` output ``` Traceback (most recent call last): File "/Text", line 9, in <module> SystemError: More keyword list entries (5) than format specifiers (4) Error: Python script failed, check the message in the system console ```
Author

Added subscriber: @JakubUhlik

Added subscriber: @JakubUhlik
Member

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'

Added subscriber: @louiea

Added subscriber: @louiea

I get this error with version 3.1.2. I think the error was introduced with Fix #96308, a new argument "vertex_normals" was added to source/blender/python/bmesh/bmesh_py_types.c

I think vertex_normals was added without a type arguement.

static PyObject *bpy_bmesh_from_object(BPy_BMesh *self, PyObject *args, PyObject *kw)
{
  static const char *kwlist[] = {
      "object", "depsgraph", "cage", "face_normals", "vertex_normals", NULL};
I get this error with version 3.1.2. I think the error was introduced with Fix #96308, a new argument "vertex_normals" was added to source/blender/python/bmesh/bmesh_py_types.c I think vertex_normals was added without a type arguement. ``` static PyObject *bpy_bmesh_from_object(BPy_BMesh *self, PyObject *args, PyObject *kw) { static const char *kwlist[] = { "object", "depsgraph", "cage", "face_normals", "vertex_normals", NULL}; ```

This issue was referenced by 77db370cb6

This issue was referenced by 77db370cb6e032d477bf48dbeb8bb608ba2b643f
Member

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Hans Goudey self-assigned this 2022-04-12 18:09:38 +02:00

Added subscriber: @LucasVeber

Added subscriber: @LucasVeber

@HooglyBoogly Thanks for the fix, is there any chance to commit this patch to Blender 3.1.2/ 3.1.3 as well?

@HooglyBoogly Thanks for the fix, is there any chance to commit this patch to Blender 3.1.2/ 3.1.3 as well?
Member

Unfortunately I don't think there is another release planned for 3.1, sorry about that.

Unfortunately I don't think there is another release planned for 3.1, sorry about that.

Ok thanks anyway.

Ok thanks anyway.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
6 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#97025
No description provided.