Fix: BMesh Python API errors after vertex_normals addition

64cd927519748bbd50 didn't update the argument parsing strings,
and updated the docstring of `from_object` incorrectly.

Fixes T97025, T97213